# JumanDIC-py

./: .flake8  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
src/jumandic/: __init__.py  entry.py  jumandic.py  sexp.py  utils.py
src/jumandic/dic/: __init__.py  dic.py
src/jumandic/dic/entries/: __init__.py  content_word.py
src/jumandic/grammar/: __init__.py  grammar.py
tests/: test_entry.py  test_jumandic.py  test_sexp.py
