[tool.poetry]
name = "jumandic"
version = "0.1.0"
description = "A Python API for JumanDIC"
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]
repository = "https://github.com/ku-nlp/JumanDIC-py"
readme = "README.md"
license = "MIT"
keywords = ["NLP"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tinydb = "^4.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py39", "py310"]

[tool.isort]
line_length = 120

[tool.mypy]
python_version = 3.8
